# koma

./: .dockerignore  .env  .env.template  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  config_template.toml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
database/: query.sql
src/qa/: __init__.py
tests/: ApplicationTests.py  EntityTests.py  EntryTests.py  NoteAttachmentTests.py  __init__.py
