[project]
requires-python = ">=3.12"

[tool.pdm.dev-dependencies]
dev = [
    "-e pkg-core @ file:///${PROJECT_ROOT}/packages/pkg-core",
    "-e pkg-cli @ file:///${PROJECT_ROOT}/packages/pkg-cli",
    "-e pkg-server @ file:///${PROJECT_ROOT}/packages/pkg-server",
    "ruff>=0.4.3",
    "mypy>=1.10.0",
    "types-protobuf>=5.26.0.20240422",
    "uvicorn>=0.29.0",
    "django-stubs[compatible-mypy]>=5.0.0",
]

[tool.pdm.scripts]

ruff = "ruff check"
mypy = "mypy packages"
lint = {composite = ["ruff", "mypy"]}

server_test.cmd = "uvicorn agent.asgi:application"
server_test.env_file = ".env.test"

django_manage.cmd = "python packages/pkg-server/manage.py {args}"
django_manage.env_file = ".env.test"

query = {call = "cli.endpoint:cli"}

[tool.ruff]
src = ["packages/pkg-core", "packages/pkg-cli", "packages/pkg-server"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "agent.settings"

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["F401"]
